@@ -28,10 +28,16 @@ plugins {
   id "groovy"
   id "io.miret.etienne.sass" version "1.5.2"
   id "info.solidsoft.pitest" version "1.19.0-rc.2"
+  id "com.google.protobuf" version "0.9.4"
 }
 
 group = 'org.fitnesse'
 version = new Date().format('yyyyMMdd')
+ext {
+  vertxVersion = '4.5.13'
+  grpcVersion = '1.69.0'
+  protobufVersion = '3.25.5'
+}
 
 println "Building FitNesse v${project.version}..."
 
@@ -53,6 +59,7 @@ sourceSets {
   main {
     java.srcDir 'src'
     resources.srcDir 'src'
+    proto.srcDir 'src/fitnesse/mcp/proto'
     output.resourcesDir java.classesDirectory
   }
   test {
@@ -62,7 +69,7 @@ sourceSets {
 
 java {
   toolchain {
-    languageVersion.set(JavaLanguageVersion.of(11))
+    languageVersion.set(JavaLanguageVersion.of(21))
   }
 }
 
@@ -73,23 +80,64 @@ dependencies {
   implementation "org.apache.commons:commons-lang3:3.19.0"
   implementation "org.slf4j:slf4j-api:2.0.17"
   implementation "org.slf4j:slf4j-jdk14:2.0.17"
-  implementation "org.json:json:20250517"
   implementation "com.googlecode.java-diff-utils:diffutils:1.3.0"
   implementation "org.apache.commons:commons-text:1.14.0"
   implementation "org.openjdk.nashorn:nashorn-core:15.7"
-  implementation "org.codehaus.groovy:groovy-xml:3.0.25"
+  implementation "org.apache.groovy:groovy-xml:4.0.22"
+  implementation "net.sourceforge.plantuml:plantuml:1.2024.8"
+  implementation "io.vertx:vertx-core:${vertxVersion}"
+  implementation "io.vertx:vertx-web:${vertxVersion}"
+  implementation "io.vertx:vertx-web-client:${vertxVersion}"
+  implementation "io.vertx:vertx-auth-oauth2:${vertxVersion}"
+  implementation "io.vertx:vertx-config:${vertxVersion}"
+  implementation "io.vertx:vertx-grpc:${vertxVersion}"
+  implementation "io.vertx:vertx-micrometer-metrics:${vertxVersion}"
+  implementation "io.micrometer:micrometer-registry-prometheus:1.12.6"
+  implementation "com.google.protobuf:protobuf-java:${protobufVersion}"
+  protobuf "io.vertx:vertx-grpc-protoc-plugin:${vertxVersion}"
 
   compileOnly gradleApi()
   compileOnly "org.apache.ant:ant:1.10.15"
   compileOnly "junit:junit:4.13.2"
+  compileOnly "javax.annotation:javax.annotation-api:1.3.2"
 
   testImplementation gradleApi()
+  testImplementation "org.junit.jupiter:junit-jupiter-api:5.11.3"
+  testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.11.3"
+  testRuntimeOnly "org.junit.platform:junit-platform-launcher"
+  // Keep JUnit4/Vintage temporarily while migrating tests; remove once fully on JUnit5
   testImplementation "junit:junit:4.13.2"
-  testImplementation "org.mockito:mockito-core:3.12.4"
+  testRuntimeOnly "org.junit.vintage:junit-vintage-engine:5.11.3"
+  testImplementation "org.mockito:mockito-core:5.15.2"
+  testImplementation "org.mockito:mockito-junit-jupiter:5.15.2"
   testImplementation "org.hamcrest:hamcrest-all:1.3"
   testImplementation "net.javacrumbs.json-unit:json-unit:2.40.0"
+  testImplementation "io.vertx:vertx-unit:${vertxVersion}"
+  testImplementation "io.vertx:vertx-junit5:${vertxVersion}"
 
   lesscss "org.mozilla:rhino-tools:1.8.0"
+}
+
+ protobuf {
+  protoc {
+    artifact = "com.google.protobuf:protoc:${protobufVersion}"
+  }
+  plugins {
+    vertxGrpc {
+      artifact = "io.vertx:vertx-grpc-protoc-plugin:${vertxVersion}"
+    }
+    grpcJava {
+      artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}"
+    }
+  }
+  generateProtoTasks {
+    all().each { task ->
+      task.plugins {
+        vertxGrpc { option 'vertx' }
+        grpcJava {}
+      }
+    }
+  }
 }
 
 task watchTemplates {
@@ -220,6 +268,10 @@ task copyRuntimeLibs(type: Copy) {
 test {
   dependsOn copyRuntimeLibs
   maxParallelForks 1
+  jvmArgs "-Djava.security.manager=allow"
+  // Force Slim to use ephemeral TCP ports instead of legacy pipe (1) to avoid startup failures on newer JVMs.
+  systemProperty "slim.port", "0"
+  useJUnitPlatform()
 }
 
 pitest {
@@ -247,6 +299,20 @@ jar {
   manifest {
     attributes("Main-Class": "fitnesseMain.FitNesseMain",
         "Implementation-Version": archiveVersion)
+  }
+}
+
+tasks.register('fitnesseAiStandaloneJar', Jar) {
+  dependsOn createUpdateLists, classes
+  archiveBaseName.set('fitnesse-ai-standalone')
+  archiveClassifier.set('')
+  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+  from(sourceSets.main.output)
+  from {
+    configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+  }
+  manifest {
+    attributes("Main-Class": "fitnesseMain.FitNesseMain")
   }
 }
 
